<resources>
    <string name="app_name">MovieList</string>

    <string name="txtSplashSubText">MOVIE LIST APPLICATION</string>
    <string name="txtSplashTitle">IMDB</string>
    <string name="btn_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="some_error_desc">some error desc</string>
    <string name="btn_signup">Sign-up</string>
    <string name="btn_have_account">have account?</string>
    <string name="btn_sign_up">Sign-up</string>
    <string name="btn_sign_in">Sign-in</string>
    <string name="btn_dont_have_account">do not have account? Sign-up</string>
    <string name="search_hint">Search</string>

    <string-array name="search_filters" >
        <item>Title</item>
        <item>Plot</item>
        <item>Actors</item>
        <item>Director</item>
    </string-array>

    <string name="sampleMovieName">The Dark Knight</string>
    <string name="sampleMovieDesc">When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, the caped crusader must come to terms with one of the greatest psychological tests of his ability to fight injustice.</string>
    <string name="sampleMovieActors">Christian Bale, Heath Ledger, Aaron Eckhart, Michael Caine</string>
    <string name="sampleMovieDirector">Christopher Nolan</string>
    <string name="sampleMovieWriter">Jonathan Nolan (screenplay), Christopher Nolan (screenplay), Christopher Nolan (story), David S. Goyer (story), Bob Kane (characters)</string>
    <string name="sampleMovieGenres">Action,Crime,Drama</string>
    <string name="sampleMovieCountry">USA, UK</string>

    <string name="moviePropertyCountry">Country :</string>
    <string name="moviePropertyDesc">Desc :</string>
    <string name="moviePropertyActors">Actors :</string>
    <string name="moviePropertyDirector">Director :</string>
    <string name="moviePropertyWriter">Writer :</string>
    <string name="moviePropertyGenres">Genres :</string>

    <string name="refresh_token">def50200c2c0008bbce29de2b29472a24da61bbdfea56cb28117710d6a2be56fb0a1ef20529d02c338e409fd14d9d233fd8b590b7d6cc59e771b0c9efa30675edecb7c0c6580bef2a87f71672dcc30770d3f64f0ca5063e2607b18066cf6a7d6c5ae9a6e3e7a4481a6d726a74bb2609405a403b161da024fac76027d2c3b528c18a59a2f585e2eae2dac7931737061de7ecbb37fee094304fada0cb115b9e70f0288cbf1ef6a8a769c667175db837d1248fd4a431fcb2a3932122712f93a4a21d48c8714c87991a9d99c01678ff2f355acf04af8dec2653d8c1f9fbd66f3ab6ce05cb564f00b3a1dcbfc7f331dec41369efbcda8440ac3dddabddd4b24652634ab49c2eb9a6e0cf91d733ac0bf9705f4da581613cc1cf6e12620939a906eeed3164bc42472c41b2972b3b586491ced490844dbbfefe85248652f9e2b48c6b84ca9d8e40bb5c744404e1d0b02639135eb07dad37dbcd4bec30f487b79bcc1f61dfb</string>


</resources>